--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "tiragon-order-app",
+  "name": "tiragon-order-app-full",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
